api/cd/kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: alice
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: alice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alice
  namespace: dev
spec:
  selector:
    matchLabels:
      app: alice
  replicas: 2
  template:
    metadata:
      labels:
        app: alice
    spec:
      containers:
      - name: alice
        image: alicews/alice:latest
        ports:
        - containerPort: 8080
        livenessProbe:
              httpGet:
                path: /healthcheck
                port: 8080
